tidy up with explanations from the talk

--- a/Pandas - Selecting and Munging missing data.ipynb
+++ b/Pandas - Selecting and Munging missing data.ipynb
@@ -1110,15 +1110,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## So we could put that data into another column and add that column + parking_meters['cost'] together.  And continue with other values we see that are misplaced in this manner."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## But we can also employ another way to deal with this missing data.  This ffill call takes the value of the one in the previous row and fills in the NaN in this column."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "parking_meters['cost'] = parking_meters.cost.ffill()\n",
     "#parking_meters['cost'].fillna('missing')\n",
     "#parking_meters['cost'].dropna(axis=0) # ragequit!\n",
     "# interpolation with scipy libs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## There are pleanty of these types of ways of dealing with missing data.  You could go to Scipy to come up with a fancy algorithm to figure out how expensive a meter should be in this area rounded to the nearest quarter.  I think this problem lends itself to Machine learning because the problems seem to be one of 4 values."
    ]
   },
   {
@@ -1142,332 +1165,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## In all of these calls you can see we have been adding on function after function.  Some of these can get pretty long.  So in the future when I have a long call like this I'll be putting the function calls on the next line.  Like so:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parking_meters['config_name']\n",
-    "        .str\n",
-    "        .split()\n",
-    "        .str[3].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>zone</th>\n",
-       "      <th>area</th>\n",
-       "      <th>sub_area</th>\n",
-       "      <th>pole</th>\n",
-       "      <th>config_code</th>\n",
-       "      <th>config_name</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>cost</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1016</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>East Village</td>\n",
-       "      <td>700\\tTHIRTEENTH ST</td>\n",
-       "      <td>13-701</td>\n",
-       "      <td>1044</td>\n",
-       "      <td>9 Hour Max $0.50 HR 8am-6pm M-Sat</td>\n",
-       "      <td>-117.152776</td>\n",
-       "      <td>32.712902</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1017</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>East Village</td>\n",
-       "      <td>700\\tTHIRTEENTH ST</td>\n",
-       "      <td>13-703</td>\n",
-       "      <td>1044</td>\n",
-       "      <td>9 Hour Max $0.50 HR 8am-6pm M-Sat</td>\n",
-       "      <td>-117.152816</td>\n",
-       "      <td>32.712971</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1018</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>East Village</td>\n",
-       "      <td>700\\tTHIRTEENTH ST</td>\n",
-       "      <td>13-705</td>\n",
-       "      <td>1044</td>\n",
-       "      <td>9 Hour Max $0.50 HR 8am-6pm M-Sat</td>\n",
-       "      <td>-117.152322</td>\n",
-       "      <td>32.712693</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1019</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>East Village</td>\n",
-       "      <td>700\\tTHIRTEENTH ST</td>\n",
-       "      <td>13-707</td>\n",
-       "      <td>1044</td>\n",
-       "      <td>9 Hour Max $0.50 HR 8am-6pm M-Sat</td>\n",
-       "      <td>-117.152362</td>\n",
-       "      <td>32.712770</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1020</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>East Village</td>\n",
-       "      <td>700\\tTHIRTEENTH ST</td>\n",
-       "      <td>13-709</td>\n",
-       "      <td>1044</td>\n",
-       "      <td>9 Hour Max $0.50 HR 8am-6pm M-Sat</td>\n",
-       "      <td>-117.152778</td>\n",
-       "      <td>32.713152</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1021</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>East Village</td>\n",
-       "      <td>700\\tTHIRTEENTH ST</td>\n",
-       "      <td>13-711</td>\n",
-       "      <td>1044</td>\n",
-       "      <td>9 Hour Max $0.50 HR 8am-6pm M-Sat</td>\n",
-       "      <td>-117.152779</td>\n",
-       "      <td>32.713382</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1022</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>East Village</td>\n",
-       "      <td>700\\tTHIRTEENTH ST</td>\n",
-       "      <td>13-717</td>\n",
-       "      <td>1044</td>\n",
-       "      <td>9 Hour Max $0.50 HR 8am-6pm M-Sat</td>\n",
-       "      <td>-117.152770</td>\n",
-       "      <td>32.713206</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3890</th>\n",
-       "      <td>Uptown</td>\n",
-       "      <td>Fort Stockton</td>\n",
-       "      <td>900 block South</td>\n",
-       "      <td>FS-900S</td>\n",
-       "      <td>13501</td>\n",
-       "      <td>MSPM 2 Hour Max $1.25 HR 8am-6pm Mon-Sat (Fort S</td>\n",
-       "      <td>-117.171776</td>\n",
-       "      <td>32.750727</td>\n",
-       "      <td>1.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3891</th>\n",
-       "      <td>Uptown</td>\n",
-       "      <td>Front Street</td>\n",
-       "      <td>3900 block West</td>\n",
-       "      <td>FR-3900W</td>\n",
-       "      <td>13502</td>\n",
-       "      <td>MSPM 12 Hour Max $1.25 HR 24/7  (Front Street)</td>\n",
-       "      <td>-117.165210</td>\n",
-       "      <td>32.749576</td>\n",
-       "      <td>1.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4625</th>\n",
-       "      <td>Uptown</td>\n",
-       "      <td>Normal Street</td>\n",
-       "      <td>3900 block West</td>\n",
-       "      <td>NR-3900W</td>\n",
-       "      <td>13503</td>\n",
-       "      <td>MSPM 8 Hour Max $0.50 HR 8am-6pm Mon-Sat (Normal</td>\n",
-       "      <td>-117.149673</td>\n",
-       "      <td>32.748761</td>\n",
-       "      <td>1.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2035</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>Gaslamp</td>\n",
-       "      <td>300 Fifth Ave</td>\n",
-       "      <td>5-309</td>\n",
-       "      <td>13652</td>\n",
-       "      <td>2 Hour Max $1.25 HR 8am-6pm Mon-Sat, No Parkin...</td>\n",
-       "      <td>-117.160017</td>\n",
-       "      <td>32.708693</td>\n",
-       "      <td>1.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2037</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>Gaslamp</td>\n",
-       "      <td>300 Fifth Ave</td>\n",
-       "      <td>5-311</td>\n",
-       "      <td>13652</td>\n",
-       "      <td>2 Hour Max $1.25 HR 8am-6pm Mon-Sat, No Parkin...</td>\n",
-       "      <td>-117.160018</td>\n",
-       "      <td>32.708808</td>\n",
-       "      <td>1.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2038</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>Gaslamp</td>\n",
-       "      <td>300 Fifth Ave</td>\n",
-       "      <td>5-312</td>\n",
-       "      <td>13652</td>\n",
-       "      <td>2 Hour Max $1.25 HR 8am-6pm Mon-Sat, No Parkin...</td>\n",
-       "      <td>-117.160201</td>\n",
-       "      <td>32.708864</td>\n",
-       "      <td>1.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2039</th>\n",
-       "      <td>Downtown</td>\n",
-       "      <td>Gaslamp</td>\n",
-       "      <td>300 Fifth Ave</td>\n",
-       "      <td>5-314</td>\n",
-       "      <td>13652</td>\n",
-       "      <td>2 Hour Max $1.25 HR 8am-6pm Mon-Sat, No Parkin...</td>\n",
-       "      <td>-117.160203</td>\n",
-       "      <td>32.708980</td>\n",
-       "      <td>1.25</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4653 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          zone           area            sub_area      pole  config_code  \\\n",
-       "1016  Downtown   East Village  700\\tTHIRTEENTH ST    13-701         1044   \n",
-       "1017  Downtown   East Village  700\\tTHIRTEENTH ST    13-703         1044   \n",
-       "1018  Downtown   East Village  700\\tTHIRTEENTH ST    13-705         1044   \n",
-       "1019  Downtown   East Village  700\\tTHIRTEENTH ST    13-707         1044   \n",
-       "1020  Downtown   East Village  700\\tTHIRTEENTH ST    13-709         1044   \n",
-       "1021  Downtown   East Village  700\\tTHIRTEENTH ST    13-711         1044   \n",
-       "1022  Downtown   East Village  700\\tTHIRTEENTH ST    13-717         1044   \n",
-       "...        ...            ...                 ...       ...          ...   \n",
-       "3890    Uptown  Fort Stockton     900 block South   FS-900S        13501   \n",
-       "3891    Uptown   Front Street     3900 block West  FR-3900W        13502   \n",
-       "4625    Uptown  Normal Street     3900 block West  NR-3900W        13503   \n",
-       "2035  Downtown        Gaslamp       300 Fifth Ave     5-309        13652   \n",
-       "2037  Downtown        Gaslamp       300 Fifth Ave     5-311        13652   \n",
-       "2038  Downtown        Gaslamp       300 Fifth Ave     5-312        13652   \n",
-       "2039  Downtown        Gaslamp       300 Fifth Ave     5-314        13652   \n",
-       "\n",
-       "                                            config_name   longitude  \\\n",
-       "1016                  9 Hour Max $0.50 HR 8am-6pm M-Sat -117.152776   \n",
-       "1017                  9 Hour Max $0.50 HR 8am-6pm M-Sat -117.152816   \n",
-       "1018                  9 Hour Max $0.50 HR 8am-6pm M-Sat -117.152322   \n",
-       "1019                  9 Hour Max $0.50 HR 8am-6pm M-Sat -117.152362   \n",
-       "1020                  9 Hour Max $0.50 HR 8am-6pm M-Sat -117.152778   \n",
-       "1021                  9 Hour Max $0.50 HR 8am-6pm M-Sat -117.152779   \n",
-       "1022                  9 Hour Max $0.50 HR 8am-6pm M-Sat -117.152770   \n",
-       "...                                                 ...         ...   \n",
-       "3890   MSPM 2 Hour Max $1.25 HR 8am-6pm Mon-Sat (Fort S -117.171776   \n",
-       "3891     MSPM 12 Hour Max $1.25 HR 24/7  (Front Street) -117.165210   \n",
-       "4625   MSPM 8 Hour Max $0.50 HR 8am-6pm Mon-Sat (Normal -117.149673   \n",
-       "2035  2 Hour Max $1.25 HR 8am-6pm Mon-Sat, No Parkin... -117.160017   \n",
-       "2037  2 Hour Max $1.25 HR 8am-6pm Mon-Sat, No Parkin... -117.160018   \n",
-       "2038  2 Hour Max $1.25 HR 8am-6pm Mon-Sat, No Parkin... -117.160201   \n",
-       "2039  2 Hour Max $1.25 HR 8am-6pm Mon-Sat, No Parkin... -117.160203   \n",
-       "\n",
-       "       latitude  cost  \n",
-       "1016  32.712902  0.50  \n",
-       "1017  32.712971  0.50  \n",
-       "1018  32.712693  0.50  \n",
-       "1019  32.712770  0.50  \n",
-       "1020  32.713152  0.50  \n",
-       "1021  32.713382  0.50  \n",
-       "1022  32.713206  0.50  \n",
-       "...         ...   ...  \n",
-       "3890  32.750727  1.25  \n",
-       "3891  32.749576  1.25  \n",
-       "4625  32.748761  1.25  \n",
-       "2035  32.708693  1.25  \n",
-       "2037  32.708808  1.25  \n",
-       "2038  32.708864  1.25  \n",
-       "2039  32.708980  1.25  \n",
-       "\n",
-       "[4653 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parking_meters.sort_values(['cost', 'config_code'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1482,7 +1179,7 @@
     "collapsed": true
    },
    "source": [
-    "## We will do more data transformation and munging next time"
+    "## We will do more data transformation and munging next time..."
    ]
   },
   {
